spices/ecs/tests/errors/xworld-wrong-world-cap.tur
;; X1 negative regression: a write cap is keyed on (World, Component).
;; A `set-Pos!` accessor minted for `RenderWorld` takes a
;; `XWriteCap<RenderWorld, Pos>`; passing it a `XWriteCap<SimWorld,
;; Pos>` -- the same component, the wrong world -- is a nominal type
;; error (TUR-E0001). This is the load-bearing cross-world guarantee:
;; a body cannot smuggle a write into a world it only declared
;; `:reads-from`, because the only cap in scope for that world is a
;; read cap, and a write cap minted elsewhere has the wrong world type.

(defmodule xworld_wrong_world_cap_test
  (export)

(import ecs/sized-storage :refer [SizedDense])
(import ecs/sized-world   :refer [sized-defworld-mono])
(import ecs/xworld        :refer [sized-defcomponent-accessors-xmono])
(import ecs/xcap          :refer [XWriteCap XReadCap make-write-cap])

(defopaque Pos :int)

(sized-defworld-mono SimWorld    (Static 8) [Pos])
(sized-defworld-mono RenderWorld (Static 8) [Pos])
(sized-defcomponent-accessors-xmono RenderWorld Pos)

(def Pos-cid 0)

(defn main [] : int
  (let [ren : RenderWorld (make-RenderWorld 8)
        ;; A cap for SimWorld, not RenderWorld.
        bad (:: (make-write-cap Pos-cid) (XWriteCap SimWorld Pos))]
    ;; ERROR: set-Pos! (RenderWorld) wants XWriteCap<RenderWorld, Pos>.
    (set-Pos! bad ren 0 (:: 1 :Pos))
    0))

) ;; end defmodule xworld_wrong_world_cap_test
